dmap-share: Use idiomatic way of checking for errors

Use the retval of the API, instead of assuming that the API will always
set the error (it'd be a bug, but at least we'd go down the correct
branch).

https://bugzilla.gnome.org/show_bug.cgi?id=766723

Signed-off-by: W. Michael Petullo <mike@flyn.org>